@@ -7,6 +7,11 @@
    - markus@cvs.openbsd.org 2001/05/30 15:20:10
      [ssh.c]
      merge functions, simplify.
+   - markus@cvs.openbsd.org 2001/05/31 10:30:17
+     [auth-options.c auth2.c channels.c channels.h clientloop.c nchan.c 
+      packet.c serverloop.c session.c ssh.c]
+     undo the .c file split, just merge the header and keep the cvs 
+     history
 
 20010606
  - OpenBSD CVS Sync
